# auto-post

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  docker-compose.yml  llms.txt  package.json  pyrightconfig.json  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/links/: links.module.ts
backend/src/messaging/: caption.service.spec.ts  caption.service.ts  messaging.module.ts  telegram.service.spec.ts  telegram.service.ts
backend/src/posts/: posts.module.ts  posts.service.ts
backend/src/products/: products.controller.spec.ts  products.service.spec.ts
backend/src/settings/: settings.controller.ts  settings.module.ts  settings.service.spec.ts  settings.service.ts
backend/test/: links.e2e-spec.ts  products.e2e-spec.ts  settings.e2e-spec.ts  telegram.e2e-spec.ts  test-setup.ts  webhooks.e2e-spec.ts
docker/: backend.Dockerfile  dashboard.Dockerfile
docs/: ARCHITECTURE.md  CONFIGURATION.md  QUICKSTART.md  USER_MANUAL.md  VALIDATION_REPORT.md
n8n/: README.md
scraper/: pyproject.toml  pyrightconfig.json  requirements.txt
scraper/src/: models.py  worker.py
scraper/src/scrapers/: magalu.py  shopee.py
scraper/tests/: conftest.py  test_scrapers_real.py  test_worker.py
(+5 files in other folders)
