[tool.poetry]
name = "cadence-auto-post-scraper"
version = "1.0.0"
description = "Scraper worker for Cadence Auto-Post using Playwright"
authors = ["Mauricio R. Filho <mauricio.srfh@gmail.com>"]
license = "MIT"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true
